fix: add right shift to desctop slider

--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -283,7 +283,7 @@ footer {
   margin: 0 auto;
 }
 
-.login__caption {
+.login__header {
   position: relative;
   font-family: 'Aleo';
   font-style: normal;
